Fixed overflow on container when small screen

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  min-height: 900px;
   height: 100svh;
   background-color: #7bb9ff;
   background-size: cover;
